# fast_rust

./: .gitignore  Cargo.toml  README.md  config.yaml  db.sqlite  db.sqlite-shm  db.sqlite-wal  fast_rust.db  main.sql  setting.toml
.cargo/: config.toml
.github/workflows/: rust.yml
arysn/src/: generator.rs
assert/templates/admin/user/: detail.html
demo/: Cargo.toml
demo/src/: main.rs
fast_admin/: Cargo.toml
fast_admin/.cargo/: config.toml
fast_admin/src/: main.rs  settting.toml  test1.rs
fast_admin/src/base/: base_controller.rs  base_model.rs  base_service.rs  mod.rs
fast_admin/src/common/: api_result.rs
fast_admin/src/config/: mod.rs  path_filter.rs  toml_config.rs
fast_admin/src/controller/: index_controller.rs  menu_controller.rs  mod.rs  student_controller.rs  user.rs  user_controller.rs
fast_admin/src/middleware/: auth.rs  handle_method.rs  mod.rs
fast_admin/src/models/: menu.rs  mod.rs  role.rs  role_menu.rs  student.rs  user.rs  user_role.rs
fast_admin/src/resource/sql/: user.html
fast_admin/src/router/: mod.rs
fast_admin/src/routers/: index_route.rs  menu_route.rs  mod.rs  user_route.rs
fast_admin/src/service/: menu_service.rs  mod.rs  role_service.rs  user.rs  user_service.rs
fast_admin/src/storage/: mod.rs  user_storage.rs
fast_admin/src/templates/: hello.html
fast_admin/src/templates/teacher/: add-department.html  add-expenses.html  add-fees-collection.html  add-salary.html  add-student.html  add-subject.html  add-teacher.html  base.html  blank-page.html  components.html  data-tables.html  departments.html  edit-department.html  edit-student.html  edit-subject.html  edit-teacher.html  error-404.html  event.html  exam.html  expenses.html  fees-collections.html  fees.html  forgot-password.html  form-basic-inputs.html  form-horizontal.html  form-input-groups.html  form-mask.html  form-validation.html  form-vertical.html  holiday.html  hostel.html  inbox.html  index.html  library.html  login.html  menu.html  profile.html  register.html  salary.html  sports.html  (+8 more)
fast_admin/src/templates/teacher/assets/css/: style.css
fast_admin/src/templates/teacher/assets/js/: script.js  student.js
fast_admin/src/templates/teacher/assets/plugins/apexchart/: chart-data.js
fast_admin/src/utils/: captcha_util.rs  http_request.rs  mod.rs  redis_util.rs  toml_util.rs  util.rs
fast_admin/src/yanke/: about.html  appoinment.html  blog-2-col-mas.html  blog-2-col.html  blog-3-col-mas.html  blog-3-col.html  blog-details-audio.html  blog-details-gallery.html  blog-details-left-sidebar.html  blog-details-video.html  blog-details.html  blog-left-sidebar.html  blog-no-sidebar.html  blog.html  cart.html  checkout.html  contact.html  doctor-details.html  doctors-01.html  doctors-02.html  doctors-03.html  doctors-04.html  gallery-01.html  gallery-02.html  gallery-03.html  gallery-details.html  index-2.html  index-3.html  index.html  login.html  product-details.html  register.html  service-details.html  services-01.html  services-02.html  services-03.html  shop.html  wishlist.html
fast_admin/src/yanke/static/css/: css2.css  css21.css  font-awesome.min.css  jquery-ui.min.css  lightcase.css  meanmenu.css  owl.carousel.min.css  style.css
fast_admin/src/yanke/static/js/: counterup.min.js  datepicker.en.js  main.js  waypoint.js  wow.min.js
fast_api/: Cargo.toml
fast_api/src/: main.rs
fast_common/: Cargo.toml  build.rs  setting.toml
fast_common/src/: lib.rs
fast_common/src/base/: base_controller.rs  base_model.rs  base_service.rs  base_storage.rs  mod.rs
fast_common/src/common/: api_result.rs  base.rs  log_config.rs  method.rs  mod.rs  orm_config.rs
fast_common/src/config/: mod.rs  path_filter.rs  toml_config.rs
fast_common/src/middleware/: auth.rs  handle_method.rs  mod.rs
fast_common/src/models/: menu.rs  mod.rs  role.rs  role_menu.rs  user.rs  user_role.rs
fast_common/src/models/domain/: user.rs
fast_common/src/models/dto/: user_dto.rs
fast_common/src/utils/: captcha_util.rs  crypt_util.rs  http_request.rs  mod.rs  redis_util.rs  toml_util.rs
fast_demo/: .env  Cargo.toml  build.rs
fast_demo/src/: main.rs  setting.toml  sites.rs  slint.slint
fast_demo/ui/: index.slint
fast_wasm/: Cargo.toml  Trunk.toml  index.html  trunk.toml
fast_wasm/src/: main.rs
fast_wasm/src/components/: api_result.rs  header.rs  mod.rs
fast_wasm/src/tailwind/: README.md  tailwind.config.js
fast_wasm/src/util/: localStorage.rs  mod.rs  request.rs
front_demo/: Cargo.toml
front_demo/src/: lib.rs
kiwi_admin_master/src/routes/: login.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
rust_yew_tailwind-main/: LICENSE  README.md
rust_yew_tailwind-main/frontend/: Cargo.toml  Trunk.toml  index.html
rust_yew_tailwind-main/frontend/src/: lib.rs  main.rs
rust_yew_tailwind-main/frontend/src/components/: mod.rs
rust_yew_tailwind-main/tailwind/: tailwind.config.js
