[package]
name = "demo"
version = "0.1.0"
authors = ["baiyu <by965738071@163>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tar = "0.4.33"
#flate2 = "1.0.20"
#crossbeam = "0.8.0"
#crossbeam-channel ="0.5.0"
#ansi_term = "0.12.1"
#lazy_static = "1.4.0"
#error-chain ="0.12.4"
#threadpool="1.8.1"
#num="0.3.1"
#num_cpus="1.13.0"
#image="0.23.13"
#rayon ="1.5.0"
#glob = "0.3.0"
#image ="0.23.13"
chrono = "0.4.19"