[package]
name = "fast_admin"
version = "0.1.0"
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-http = "3"
actix-files = "0"
anyhow = { version = "1" }
#时间
chrono = { version = "0", features = ["serde"] }

async-trait = "0.1"
tera = { version = "1", default-features = false }
tokio = { version = "1", features = ["full"] }
#token
jsonwebtoken = { version = "8" }
serde = { version = "1.0.152", default-features = false, features = [
    "derive",
    "serde_derive",
] }
serde_json = "1"


#静态初始化
lazy_static = "1"
once_cell = "1"
async_once = "0"

#网络请求
reqwest = "0"

#redis 数据库支持
deadpool-redis = { version = "0" }
redis = { version = "0", default-features = false, features = [] }

short-crypt = "1"
futures = { version = "0" }
futures-util = "0"
uuid ={version = "1",features = ["v4","fast-rng"]}
mime = "0.3.16"
captcha = "0"
image = "0.24"
tracing = { version = "0" }
env_logger = { version = "0" }
#orm
tokio-postgres = { version = "0", features = ["default", "with-chrono-0_4"] }
postgres-from-row= {version = "0"}
deadpool-postgres = { version = "0" }
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["debug-embed", "actix-web"] }
