[package]
name = "fast_api"
version = "0.1.0"
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fast_common = {path  = "../fast_common"}
lazy_static = "1.4.0"
async_once = "0.2.1"
tokio = {version ="0.2"}
