[package]
name = "fast_common"
version = "0.1.0"
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "3.3.2"
actix-http = "2.2.0"

#json支持(必须)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

#日期支持(必须)
chrono = { version = "0.4", features = ["serde"] }

#log日志支持(必须)
log = "0.4"
fast_log="1.2.9"
env_logger = "0.8"

#BigDecimal支持(可选)
bigdecimal = "0.2"

#rbatis支持
rbatis =  { version = "1.8",features=["snowflake"]}
#静态初始化
lazy_static = "1.4.0"
#异步
futures="0.3.10"

#网络请求
reqwest="0.11.0"
redis = { version = "0.19.0", features = ["async-std-comp"] }
short-crypt = "1.0.23"