[package]
name = "fast_common"
version = "0.1.0"
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "3.3.2"
actix-http = "2.2.0"

#json支持(必须)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

#日期支持(必须)
chrono = { version = "0.4", features = ["serde"] }

#log日志支持(必须)
log = "0.4"
fast_log="1.2.9"
env_logger = "0.8"

#BigDecimal支持(可选)
bigdecimal = "0.2"

#rbatis支持
rbatis =  { version = "1.8.71",features=["snowflake","debug_mode"]}
#静态初始化
lazy_static = "1.4.0"
#异步
futures="0.3.10"

#网络请求
reqwest="0.11.0"
redis = { version = "0.17.0", features = ["async-std-comp","tokio-rt-core"] ,default-features = false  }
redis-async-pool = "0.2.4"

short-crypt = "1.0.23"
async_once = "0.2.1"
#解析toml
toml_edit = "0.2.0"

validator ="0.12.0"
validator_derive ="0.12.0"
uuid ="0.8.2"
mime = "0.3.16"
jsonwebtoken = "7.2.0"