[package]
name = "fast_common"
version = "0.1.0"
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1" }
actix-http = { version = "3.0.4" }
anyhow = { version = "1.0.56" }
tokio = { version = "1.17.0", features = ["full"] }
validator = "0.14.0"
validator_derive = "0.14.0"
validators = { version = "0.24.1", features = [] }
thiserror = { version = "1.0", features = [] }

#json支持(必须)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

#日期支持(必须)
chrono = { version = "0.4", features = ["serde"] }

#log日志支持(必须)
log = "0.4"
env_logger = { version = "0.9.0" }

#BigDecimal支持(可选)
bigdecimal = "0.3.0"

#rbatis支持
rbatis = { version = "3.1.6", default-features = false, features = ["debug_mode"] }
rbson = { version = "*" }
#静态初始化
lazy_static = "1.4.0"
#异步
futures = "0.3.10"

#网络请求
reqwest = "0.11.0"
deadpool-redis = { version = "0.10" }
redis = { version = "0.21", default-features = false, features = [] }

short-crypt = "1.0.23"
async_once = "0.2.1"
#解析toml
#toml_edit = "0.14.2"
#toml-parse = "0.2.7"
config_struct = {version= "0.5.0",features = ["toml-parsing"]}
uuid = "0.8.2"
mime = "0.3.16"
jsonwebtoken = "8.0.1"
captcha = "0.0.8"
qrcode = "0.12"
image = "0.24.1"
async-trait = "0.1.53"
