[package]
name = "fast_demo"
version = "0.1.0"
authors = ["baiyu <by965738071@163>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.9.0",features=["attributes"]}
reqwest = {version="0.11.2",features=["blocking"]}
scraper = {version="0.12.0"}
colored = {version="2.0.0"}
