[package]
name = "fast_demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
iced = {version = "0.9.0"}
serde = {version = "1",features = ["derive"]}
 
tokio ={ version = "1",features = ["full"]}