[package]
name = "fast_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
yew = { version = "0" }
yew_styles = { version = "0", features = ["full"] }
web-sys = { version = "0", features = [
    "HtmlInputElement",
    "Location",
    "Window",
    "Request",
    "RequestMode",
    "RequestInit",
    "Response",
    "InputEvent",
    "Headers",
    "MouseEvent",
    "Document",
    "Storage"
] }
js-sys = "0"
js-sys-futures = "0"
wasm-bindgen = { version = "0", features = ["serde-serialize"] }
wasm-bindgen-futures = "0"
gloo-utils = { version = "0" }
gloo-console = { version = "0" }
async-std = {version = "1"}
reqwest = {version = "0",features = ["json"]}
anyhow = {version = "1"}