[package]
name = "front_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
[dependencies]
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
web-sys = { version = "0", features = ["RequestInit","Request","RequestMode","Response","Window"] }
js-sys =  {version = "0" }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
